[ui] add: Toast notification system + async database fixes
- Fixed missing await on database calls (sql.js is async)
- Built professional toast notification system
- Error toasts: detailed message, timestamp, copy/logs buttons
- Success toasts: auto-dismiss after 10 seconds
- Switched from better-sqlite3 → sql.js (pure JS, no compilation)
- Updated conventions: Core Principle #4 (Async Everything)
- Updated conventions: Error display standards
- Created Decision 002: better-sqlite3 vs sql.js

Features:
- UI shows real bookmark counts (10 bookmarks)
- Sync Now button working end-to-end
- Export button creates NotebookLM files
- Status updates in real-time
- Detailed error display for debugging

Convention updates:
- All database calls must be awaited
- All errors must be detailed and actionable
- Toast system behavior standardized

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Sync Twitter bookmarks and lists to NotebookLM",
   "main": "src/main/index.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "electron . --dev",
+    "start": "electron . --show",
+    "dev": "electron . --dev --show",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,10 +18,9 @@
   "author": "Timothy Joo <timothy@iteachyouai.com>",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^9.6.0",
     "electron": "^27.3.11",
     "node-schedule": "^2.1.1",
-    "playwright": "^1.45.3"
-  },
-  "devDependencies": {}
+    "playwright": "^1.45.3",
+    "sql.js": "^1.13.0"
+  }
 }
