--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "electron . --show",
     "dev": "electron . --dev --show",
+    "sync": "node run-sync.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
