fix: Add browser lock cleanup script and troubleshooting
🐛 Fixed ProcessSingleton lock issue

Problem:
- CLI sync fails when Electron app is running
- Stale SingletonLock file prevents browser launch
- Error: 'Failed to create a ProcessSingleton for your profile directory'

Solution:
- Created fix-lock.sh script to auto-clean lock files
- Added 'npm run fix' command for one-step fix + sync
- Updated README with troubleshooting steps
- Updated CHANGELOG for v1.0.1

Files Added:
- fix-lock.sh (executable script to remove locks)

Files Modified:
- package.json (added 'fix' script)
- README.md (expanded troubleshooting section)
- CHANGELOG.md (documented v1.0.1)

Usage:
  npm run fix     # Auto-fix and sync
  ./fix-lock.sh   # Manual fix only

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron . --show",
     "dev": "electron . --dev --show",
     "sync": "node run-sync.js",
+    "fix": "./fix-lock.sh && npm run sync",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
