feat: Add Twitter Lists support (v1.1.0)
✨ NEW FEATURE: Extract and sync Twitter Lists to NotebookLM

Core Features:
- Extract tweets from any Twitter List
- Reuses existing bookmark extraction (YouTube, images, threads, etc.)
- Separate NotebookLM notebook per list
- List-specific naming: BrainBrief - {ListName} - {Date}
- Enable/disable individual lists via config
- Integrated into Electron app tray menu

Extraction:
- extractListTweets() reuses _extractTweetData() function
- Same rich content extraction (YouTube, images, PDFs, quoted tweets)
- Same scroll logic and duplicate detection
- Configurable max tweets per list

NotebookLM Integration:
- uploadListTweets() creates list-specific notebooks
- Auto-generates date-based titles
- Uses existing upload automation pipeline
- Tracks notebooks separately per list

Database Schema:
- list_metadata table: stores list info (ID, name, URL, enabled status)
- list_tweets table: many-to-many tweet-list association
- Proper indexes for fast queries
- Foreign keys with CASCADE delete

Electron App:
- Added "Sync Lists" button to tray menu
- Renamed "Sync Now" to "Sync Bookmarks" for clarity
- Lists sync runs in background
- System notifications for progress

CLI Scripts:
- npm run discover:lists - Auto-find lists (clicks Lists sidebar)
- npm run sync:lists - Sync all enabled lists
- click-lists.js - Interactive discovery tool
- run-sync-lists.js - CLI sync runner

Files Added:
- run-sync-lists.js (CLI runner)
- click-lists.js (list discovery)
- lists-config.example.json (example config)
- auto-find-lists.js, find-my-lists.js, discover-lists.js (discovery attempts)

Files Modified:
- src/automation/twitter.js (added extractListTweets)
- src/automation/notebooklm.js (added uploadListTweets)
- src/db/schema.sql (list tables and indexes)
- src/main/index.js (Sync Lists menu item)
- package.json (discover:lists, sync:lists scripts)
- README.md (Lists documentation)
- CHANGELOG.md (v1.1.0 notes)

Usage:
1. npm run discover:lists (

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "electron . --show",
     "dev": "electron . --dev --show",
     "sync": "node run-sync.js",
+    "sync:lists": "node run-sync-lists.js",
+    "discover:lists": "node click-lists.js",
     "fix": "./fix-lock.sh && npm run sync",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
