--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "electron . --dev --show",
     "sync": "node run-sync.js",
     "sync:lists": "node run-sync-lists.js",
-    "discover:lists": "node click-lists.js",
+    "discover:lists": "node click-and-extract-lists.js",
     "fix": "./fix-lock.sh && npm run sync",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
