--- a/lists-config.example.json
+++ b/lists-config.example.json
@@ -6,13 +6,15 @@
       "listId": "YOUR_LIST_ID_HERE",
       "enabled": true,
       "maxTweets": 50,
+      "daysBack": 3,
       "memberCount": "3.4K members"
     }
   ],
   "settings": {
     "syncEnabled": true,
     "createSeparateNotebooks": true,
-    "notebookNameFormat": "BrainBrief - {listName} - {date}"
+    "notebookNameFormat": "BrainBrief - {listName} - {date}",
+    "defaultDaysBack": 3
   }
 }
 
